manifests/apps/talos/homeraspi-display/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeraspi-display
  labels:
    app: homeraspi-display
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: homeraspi-display
